# Agent-Runtime-Grid

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bounded-adapter.yml  config.yml  evidence-integrity.yml  runtime-defect.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  AUTONOMOUS_ROUTINE_CONTRACT.md  CASE_STUDY.md  CODEX_PROMPT.md  COST_BUDGET.md  DECISION_LOG.md  EVIDENCE_INDEX.md  FAILURE_MODES.md  IMPLEMENTATION_CONTRACT.md  IMPLEMENTATION_JOURNAL.md  INTEGRATIONS.md  KNOWN_LIMITS.md  LICENSE_REVIEW.md  OBSERVABILITY.md  OPERATIONS.md  README.md  SECURITY_BOUNDARIES.md  STACK_OVERVIEW.md  TRIGGER_SECURITY.md  spec.md  tasks.md
docs/adr/: 0001-neutral-runtime-framing.md
docs/audit/: AUDIT_INDEX.md  PHASE10_IMPLEMENTATION_REVIEW.md  PHASE11_IMPLEMENTATION_REVIEW.md  PHASE1_AUDIT.md  PHASE1_IMPLEMENTATION_REVIEW.md  PHASE2_IMPLEMENTATION_REVIEW.md  PHASE3_IMPLEMENTATION_REVIEW.md  PHASE4_FINAL_REVIEW.md  PHASE5_IMPLEMENTATION_REVIEW.md  PHASE7_IMPLEMENTATION_REVIEW.md  PHASE8_FINAL_REVIEW.md  PHASE9_IMPLEMENTATION_REVIEW.md
docs/evidence/: RUNTIME_OSS_TRUTH_REPAIR_2026-07-13.md  failure-injection-pack-summary.md  full-stack-artifact-proof.md  full-stack-live-local.md  routine-reliability-report.md  runtime-reliability-500.md  runtime-smoke-100.md
docs/license-review/: direct-dependencies.json
reports/: README.md
src/agent_runtime_grid/: __init__.py  config.py  evidence.py  logging.py
tests/: test_bootstrap.py  test_ci_contract.py  test_committed_release_evidence.py  test_compose_contract.py  test_database_reset_safety.py  test_evidence_bundle.py  test_health.py  test_repo_hygiene.py  test_routine_contract_docs.py  test_settings.py
tests/integration/: test_artifact_report_integrity.py  test_artifacts.py  test_auth_boundary.py  test_budget_enforcement.py  test_cli_batch.py  test_cost_telemetry.py  test_eval_lab_integration.py  test_failure_injection.py  test_failure_report_pack.py  test_full_stack_proof.py  test_gdev_agent_integration.py  test_idempotent_finalization.py  test_job_repository.py  test_logging.py  test_metrics.py  test_observability_safety.py  test_operator_repair_cli.py  test_queue_adapter.py  test_queue_metrics.py  test_smoke_command.py  test_stale_lease_recovery.py  test_timeout_cancellation.py  test_tracing.py  test_worker_heartbeat.py  test_worker_lifecycle.py
tests/load/: test_benchmark_harness.py  test_reliability_proof.py
(+40 files in other folders)
