[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime-grid"
version = "0.1.0"
description = "Deterministic local runtime grid for agent job execution."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [{name = "Ashishki"}]
keywords = ["agent-runtime", "reliability", "redis-streams", "postgresql", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "fastapi>=0.115,<1.0",
    "opentelemetry-api>=1.28,<2.0",
    "opentelemetry-sdk>=1.28,<2.0",
    "prometheus-client>=0.21,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "redis>=5.2,<6.0",
    "sqlalchemy>=2.0,<3.0",
    "typer>=0.13,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[project.urls]
Homepage = "https://github.com/ashishki/Agent-Runtime-Grid"
Issues = "https://github.com/ashishki/Agent-Runtime-Grid/issues"

[project.scripts]
agent-runtime-grid = "agent_runtime_grid.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agent_runtime_grid.storage" = ["migrations/*.sql"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
